# talent-match-ai

./: .gitignore  README.md  docker-compose.yml  flake.nix
backend/: pyproject.toml
backend/scripts/: check_db.py  common.py  compare_with_naive_rag.py  generate_cvs.py  generate_rfps.py
backend/src/api/v1/: master_router.py
backend/src/api/v1/endpoints/: admin.py  entities.py  info.py  ingest.py  matching.py  query.py
backend/src/core/: config.py  constants.py  prompts.py  utils.py
backend/src/core/models/: models.py  project_models.py  rfp_models.py
backend/src/repositories/: cv_repository.py  matching_repository.py  programmer_repository.py  project_repository.py  rfp_repository.py  system_repository.py
backend/src/services/: admin_service.py  ingest_cv.py  ingest_projects.py  ingest_rfp.py  neo4j_service.py  openai_service.py  query_service.py
backend/src/staffing_graphrag/: main.py
backend/src/staffing_graphrag/api/v1/: master_router.py
backend/src/staffing_graphrag/api/v1/endpoints/: admin.py  entities.py  info.py  matching.py
backend/src/staffing_graphrag/core/: config.py  constants.py  utils.py
backend/src/staffing_graphrag/core/models/: cv_models.py  project_models.py  rfp_models.py
backend/src/staffing_graphrag/repositories/: cv_repository.py  matching_repository.py  programmer_repository.py  project_repository.py  rfp_repository.py  system_repository.py
backend/src/staffing_graphrag/services/: admin_service.py  ingest_cv.py  ingest_projects.py  ingest_rfp.py  openai_service.py  query_service.py
client/: pyproject.toml
client/src/: config.py
client/src/pages/: add_programmer.py  add_project.py  add_rfp.py  programmers.py  projects.py  rfps.py
client/src/utils/: utils.py
shared/: pyproject.toml
shared/src/shared_types/: programmer_types.py
