[project]
name = "staffing-graphrag"
version = "0.1.0"
authors = [ ]
requires-python = "~=3.12.11"
dependencies = [
  "shared-types",
  "fastapi[standard]>=0.128.0",
  "langchain-core>=1.2.6",
  "langchain-experimental>=0.4.1",
  "langchain-neo4j>=0.6.0",
  "langchain-openai>=1.1.6",
  "openai>=2.14.0",
  "python-dotenv>=1.2.1",
  "result>=0.17.0",
  "unstructured[pdf]>=0.18.26",
  "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
  "faker>=40.1.0",
  "markdown>=3.10",
  "weasyprint>=67.0",
]
rag-comp = [
  "chromadb>=1.4.1",
  "langchain>=1.2.4",
]

[tool.uv.sources]
shared-types = { path = "../shared", editable = true }

[tool.basedpyright]
executionEnvironments = [
  { root = ".", extraPaths = ["src/staffing_graphrag"] }
]
reportUnusedVariable = "hint"
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false

[tool.ruff.lint.isort]
known-first-party = [
  "api",
  "core",
  "repositories",
  "services",
]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["A", "ANN", "ASYNC", "B", "C4", "D", "E", "ERA", "F", "G", "I", "ICN", "N", "PERF", "PL", "PT", "PTH", "RET", "RUF", "S", "SIM", "T10", "T20", "TID"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D213", "D203", "E501", "S311"]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"scripts/**.py" = ["T201"]
